--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,3 +1,4 @@
+<% include partials/header %>
 <h1>This is the campground page</h1>
 <% campgrounds.forEach(function(campground){ %>
     <div>
@@ -5,3 +6,5 @@
         <img src="<%=campground.image%>"</div>
     </div>
 <%});%>
+
+<% include partials/footer %>
