--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,11 +5,17 @@
     <title>YelpCamp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--<style type="text/css">
-        body {
+    <style type="text/css">
+        /* body {
             padding-top: 20px;
+        } */
+
+        .campNames {
+            padding-top: 2px;
+            text-align: center;
+            font-weight: bold;
         }
-    </style>-->
+    </style>
 </head>
 
 <body>
@@ -17,7 +23,6 @@
         <div class="jumbotron">
             <h1>Campgrounds</h1>
             <p>Below is the list of all campgrounds that we have for you.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <p><a class="btn btn-primary btn-lg" href="/campgrounds/new" role="button">Add new Campground</a></p>
         </div>
     </div>
-    <a href="campgrounds/new">Add new campground</a>
