Added Polaroid style thumbnails to campgrounds page.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,9 @@
         /* body {
             padding-top: 20px;
         } */
-
-        .campNames {
-            padding-top: 2px;
+        .caption{
             text-align: center;
-            font-weight: bold;
+            font-weight: 300;
         }
     </style>
 </head>
