--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -3,10 +3,11 @@
     <div class="row">
         <% campgrounds.forEach(function(campground){ %>
 
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-            <div class="thumbnail"><img src="<%=campground.image%>"></div>
-            <div class="campNames">
-                <h4><%=campground.name%></h4>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 polaroid">
+            <div class="thumbnail"><img src="<%=campground.image%>">
+                <div class="caption">
+                    <h4><%=campground.name%></h4>
+                </div>
             </div>
         </div>
         <%});%>
