--- a/views/newCampground.ejs
+++ b/views/newCampground.ejs
@@ -1,6 +1,28 @@
-<h1>Create a new campground</h1>
-<form action="/campgrounds" method="POST">
+<% include partials/header %>
+<div class="container">
+    <div class="row">
+        <div style="text-align: center">
+            <h1 style = "font-size: 25px">Create a new Campground</h1>
+        </div>
+        <div class="center-block" style="width: 40%; margin-top: 20px">
+            <form action="/campgrounds" method="POST">
+                <div class="form-group">
+                    <!-- <label for="campnameId">Name</label> -->
+                    <input type="text" class="form-control" id="campnameId" placeholder="Enter a Campground Name"
+                        name="campname">
+                </div>
+                <div class="form-group">
+                    <!-- <label for="campurlId">Image URL</label> -->
+                    <input type="url" class="form-control" id="campurlId" placeholder="Enter the Image URL">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
+<% include partials/footer %>
+<!-- <form action="/campgrounds" method="POST">
     <input type="text" name="campname" placeholder="Enter Campground Name">
     <input type="text" name="campurl" placeholder="Enter the image URL">
     <input type="submit">
-</form>
+</form> -->
