--- a/views/newCampground.ejs
+++ b/views/newCampground.ejs
@@ -13,7 +13,7 @@
                 </div>
                 <div class="form-group">
                     <!-- <label for="campurlId">Image URL</label> -->
-                    <input type="url" class="form-control" id="campurlId" placeholder="Enter the Image URL">
+                    <input type="url" class="form-control" id="campurlId" placeholder="Enter the Image URL" name="campurl">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
