Made changs to campgrounds page to get the data from db.

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -11,7 +11,7 @@
         <% campgrounds.forEach(function(campground){ %>
 
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 polaroid">
-            <div class="thumbnail"><img src="<%=campground.image%>">
+            <div class="thumbnail"><img src="<%=campground.imageUrl%>">
                 <div class="caption">
                     <h4><%=campground.name%></h4>
                 </div>
