Made changes to save the new campground to db.

--- a/views/newCampground.ejs
+++ b/views/newCampground.ejs
@@ -9,11 +9,11 @@
                 <div class="form-group">
                     <!-- <label for="campnameId">Name</label> -->
                     <input type="text" class="form-control" id="campnameId" placeholder="Enter a Campground Name"
-                        name="campname">
+                        name="name">
                 </div>
                 <div class="form-group">
                     <!-- <label for="campurlId">Image URL</label> -->
-                    <input type="url" class="form-control" id="campurlId" placeholder="Enter the Image URL" name="campurl">
+                    <input type="url" class="form-control" id="campurlId" placeholder="Enter the Image URL" name="imageUrl">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
