--- a/views/newCampground.ejs
+++ b/views/newCampground.ejs
@@ -2,18 +2,22 @@
 <div class="container">
     <div class="row">
         <div style="text-align: center">
-            <h1 style = "font-size: 25px">Create a new Campground</h1>
+            <h1 style="font-size: 25px">Create a new Campground</h1>
         </div>
         <div class="center-block" style="width: 40%; margin-top: 20px">
             <form action="/campgrounds" method="POST">
                 <div class="form-group">
                     <!-- <label for="campnameId">Name</label> -->
-                    <input type="text" class="form-control" id="campnameId" placeholder="Enter a Campground Name"
+                    <input type="text" class="form-control" id="campnameId" placeholder="Enter the Campground Name."
                         name="name">
                 </div>
                 <div class="form-group">
                     <!-- <label for="campurlId">Image URL</label> -->
-                    <input type="url" class="form-control" id="campurlId" placeholder="Enter the Image URL" name="imageUrl">
+                    <input type="url" class="form-control" id="campurlId" placeholder="Enter the Image URL."
+                        name="imageUrl">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" rows="5" id="comment" name="description" placeholder="Write something about the campground."></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
