Displaying the comments.

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,8 +1,13 @@
 <% include partials/header %>
 <h1><%= campground.name %></h1>
-<img src="<%= campground.imageUrl %>" >
+<img src="<%= campground.imageUrl %>">
 <p>
     <%= campground.description %>
 </p>
+<%campground.comments.forEach(function(comment){%>
+    <p>
+        <strong><%= comment.author%></strong> - <%= comment.text%>
+    </p>
+<%})%>
 
 <% include partials/footer %>
