--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,6 +4,10 @@
 <p>
     <%= campground.description %>
 </p>
+
+<p><a class="btn btn-primary btn-lg" href="/campgrounds/<%=campground._id%>/comments/new" role="button">Add new Comment</a></p>
+
+<submit></submit>
 <%campground.comments.forEach(function(comment){%>
     <p>
         <strong><%= comment.author%></strong> - <%= comment.text%>
