--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,13 @@
             text-align: center;
             font-weight: 300;
         }
+
+        img {
+            border-radius: 8px;
+            margin-left: auto;
+            margin-right: auto;
+            width: 100%;
+        }
     </style>
 </head>
 
