--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,17 +1,41 @@
 <% include partials/header %>
-<h1><%= campground.name %></h1>
-<img src="<%= campground.imageUrl %>">
-<p>
-    <%= campground.description %>
-</p>
+<div class='container'>
+    <div class='row'>
+        <div class='col-md-3'>
+            <p class='lead'>YelpCamp</p>
+            <div class='list-group'>
+                <li class='list-group-item active'>Item01</li>
+                <li class='list-group-item'>Item02</li>
+                <li class='list-group-item'>Item03</li>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class='thumbnail'>
+                <h1><%= campground.name %></h1>
+                <div class='camp-image'>
+                    <img src="<%= campground.imageUrl %>">
+                </div>
+                <p>
+                    <strong><%= campground.description %></strong>
+                </p>
+            </div>
+            <div class='well'>
+                <div class='text-right'>
+                    <p><a class="btn btn-primary btn-lg " href="/campgrounds/<%=campground._id%>/comments/new"
+                            role="button">Add new Comment</a></p>
+                </div>
+                <hr>
+                <%campground.comments.forEach(function(comment){%>
+                <p>
+                    <strong><%= comment.author%></strong> - <%= comment.text%>
+                </p>
+                <%})%>
+            </div>
+        </div>
+    </div>
+</div>
 
-<p><a class="btn btn-primary btn-lg" href="/campgrounds/<%=campground._id%>/comments/new" role="button">Add new Comment</a></p>
 
-<submit></submit>
-<%campground.comments.forEach(function(comment){%>
-    <p>
-        <strong><%= comment.author%></strong> - <%= comment.text%>
-    </p>
-<%})%>
+
 
 <% include partials/footer %>
